--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,27 @@
-body{
-    background: palegoldenrod;
+body {
+  background: palegoldenrod;
 }
 
-h1{
-    text-align: center;
+h1 {
+  text-align: center;
 }
 
-p{
-    text-align: center;
+p {
+  text-align: center;
 }
 
-.links{
-   text-align: center;
+img {
+  display: block;
+  margin: 30px auto;
 
+  border-radius: 10px;
 }
 
-.links a{
-    color: green;
-    margin: 10px;
+.links {
+  text-align: center;
+}
+
+.links a {
+  color: green;
+  margin: 10px;
 }
